finished home page

--- a/src/index.css
+++ b/src/index.css
@@ -6,6 +6,7 @@
 @theme {
     --color-vablue-500: oklch(0.327 0.1196 257.73);
     --color-vaorange-500: oklch(0.7017 0.179302 52.4871);
+    --color-darkblue-500: oklch(0.2007 0.0747 258.11);
     --font-franklin: "Libre Franklin", sans-serif;
     --font-bodoni: "Libre Bodoni";
 }
